added starting tree

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,54 @@
 </head>
 
 <body>
-    <button>click it</button>
+    <header>
+        <a href="#"><img class="logo" src="/pictures/logo.jpg" alt="logo"></a>
+        <nav>
+            <ul>
+                <li>1 item</li>
+                <li>2 item</li>
+                <li>3 item</li>
+                <li>4 item</li>
+                <li>5 item</li>
+            </ul>
+        </nav>
+        <div class="burger">burger-menu</div>
+    </header>
+    <main>
+        <article>
+            <h1>Большой заголовок</h1>
+            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus eligendi, officiis rem delectus
+                error
+                laboriosam quod enim voluptate ipsa dolore incidunt corrupti excepturi fuga recusandae, sed, perferendis
+                iusto animi blanditiis nesciunt eius atque? Autem explicabo laborum incidunt, debitis sequi corporis,
+                unde
+                laborum iure, itaque atque, dolore impedit tenetur quae minus eos doloribus, aperiam reprehenderit.
+                magnam odio obcaecati quos officiis, dignissimos nobis. Voluptas fugiat itaque cumque, dolore corporis
+                dolorem, qui error maxime eum veritatis, laudantium architecto dolores! Nulla ea laudantium aliquam hic
+                Quibusdam labore possimus aut quia perferendis. Dignissimos aperiam illo consequatur a, sapiente
+                veritatis,
+                labore provident totam quidem, nesciunt perspiciatis.
+            </p>
+        </article>
+        <article>
+            <h2>Заголовок поменьше</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum praesentium dignissimos temporibus
+                tenetur obcaecati id quam adipisci iste sint sapiente? Voluptate repellendus ullam vitae, quas ipsa
+                neque sapiente at illum laborum suscipit numquam velit ipsum ad sed, sunt cum quae quisquam a libero
+                tempore necessitatibus? Ut at voluptas quasi tempore ea et soluta vero odio. Voluptate quaerat
+                perferendis, vel odit eum dolore aut incidunt, cumque laborum aspernatur nostrum quibusdam neque.</p>
+        </article>
+        <footer>
+            <h4>Кнтактная информация</h4>
+            <ul>
+                <li><a href="#">1 item</a></li>
+                <li><a href="#">2 item</a></li>
+                <li><a href="#">3 item</a></li>
+                <li><a href="#">4 item</a></li>
+            </ul>
+        </footer>
+    </main>
+    <!--   <button>click it</button> -->
 </body>
 
 </html>
