added starting tree

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </ul>
         </footer>
     </main>
-    <!--   <button>click it</button> -->
+      <button>click it</button>
 </body>
 
 </html>
