--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <li><a href="#">2 item</a></li>
                 <li><a href="#">3 item</a></li>
                 <li><a href="#">4 item</a></li>
+                <li><a href="#">4 item</a></li>
             </ul>
         </footer>
     </main>
