added some files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/script.js" defer></script>
-    <title>Project #1</title>
+    <title>Unicorn donuts</title>
 </head>
 
 <body>
@@ -48,8 +48,28 @@
                 tempore necessitatibus? Ut at voluptas quasi tempore ea et soluta vero odio. Voluptate quaerat
                 perferendis, vel odit eum dolore aut incidunt, cumque laborum aspernatur nostrum quibusdam neque.</p>
         </article>
+        <section>
+            <h3>Бланк заказа</h3>
+            <form action="">
+                <input type="text" placeholder="заказ">
+                <input type="radio" placeholder="заказ">
+                <input type="checkbox" placeholder="заказ">
+            </form>
+        </section>
+        <section>
+            <h3>Отзывы наших гостей</h3>
+            <ul>
+                <li>1 отзыв</li>
+                <li>2 отзыв</li>
+                <li>3 отзыв</li>
+                <li>4 отзыв</li>
+            </ul>
+        </section>
+        <aside>
+            <h4>Погода</h4>
+        </aside>
         <footer>
-            <h4>Кнтактная информация</h4>
+            <h4>Контактная информация</h4>
             <ul>
                 <li><a href="#">1 item</a></li>
                 <li><a href="#">2 item</a></li>
@@ -59,7 +79,7 @@
             </ul>
         </footer>
     </main>
-      <button>click it</button>
+    <button>click it</button>
 </body>
 
 </html>
