added some styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <a href="#"><img class="logo" src="/pictures/logo.jpg" alt="logo"></a>
         <nav>
-            <ul>
+            <ul class="header__menu">
                 <li>1 item</li>
                 <li>2 item</li>
                 <li>3 item</li>
