--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <a href="#"><img class="logo" src="/pictures/logo.jpg" alt="logo"></a>
-        <nav>
+        <nav class="menu">
             <ul class="header__menu">
                 <li>1 item</li>
                 <li>2 item</li>
@@ -27,86 +27,15 @@
         <article>
             <h1>Большой заголовок</h1>
             <p class="content">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde nemo a deleniti incidunt nesciunt,
-                aspernatur doloremque placeat praesentium aperiam minima reiciendis! Mollitia sapiente quasi quia aut?
-                Perferendis tempore necessitatibus sequi ut quis at eum, qui culpa, neque accusamus corrupti placeat
-                provident magni atque iusto. Autem, laudantium recusandae! Deleniti ipsam, ducimus eaque optio eos cum
-                commodi distinctio praesentium omnis accusantium? Alias quos cum nesciunt reprehenderit aspernatur
-                temporibus, rem numquam sit quaerat veniam. Architecto, fugiat ut qui labore praesentium iste dolor
-                nostrum molestias. Voluptatibus itaque ipsam perferendis expedita fugit magni veritatis accusamus magnam
-                enim distinctio nesciunt, ipsum atque architecto, maxime sequi molestias non hic? Rem architecto, magni
-                doloribus ipsa ab aut qui accusantium fugit veniam! Cum voluptas ut, fuga quae, magnam aut culpa esse
-                possimus, nobis sequi voluptatem in. Exercitationem voluptates tenetur quam minima debitis, quo
-                voluptatem? Vel nemo omnis sequi accusamus vitae modi eos quisquam suscipit ipsam! Repellendus
-                consequuntur magni, quas sit repellat corporis error quis harum ut! Ipsum dolorum, labore, rem provident
-                consequuntur distinctio praesentium numquam accusamus non necessitatibus placeat, explicabo aperiam
-                pariatur reprehenderit a impedit? Sunt officiis nisi molestias similique cupiditate, aliquid unde
-                voluptates, id libero voluptas sequi autem sint quam dicta alias quae cumque dolore ab blanditiis vitae
-                placeat at eveniet nam veritatis. Illo at ex ab in officiis exercitationem distinctio, molestias natus
-                est architecto tempore eaque, modi nemo animi! Dignissimos unde cum ad earum vero repellat porro
-                recusandae, nobis qui aspernatur, quas harum itaque ut? Optio nulla excepturi, nobis placeat atque quis
-                ad aut, accusantium tempore ratione amet. Possimus quia earum quo eos maxime odit quis voluptatum sint
-                omnis, rem perspiciatis reiciendis velit culpa officia. Laborum ipsum consectetur qui ex omnis quo
-                consequuntur temporibus, expedita rerum accusantium, voluptas minima adipisci vero numquam dolorum
-                mollitia dolorem perspiciatis obcaecati nulla nemo! Maxime adipisci praesentium error magni unde dolore,
-                recusandae sit hic quidem eligendi molestiae accusamus doloremque? Error similique voluptate vitae
-                accusantium quisquam commodi quae obcaecati dolorem rem odio aliquid, exercitationem deleniti
-                perferendis, hic, a distinctio eveniet ullam! Aut molestias dolore vel perspiciatis mollitia quis
-                dolores alias quo at, eveniet, asperiores optio placeat quidem! Laboriosam corrupti, dolorem vel at sint
-                ut magni explicabo ipsum odio adipisci doloremque cum corporis, saepe expedita repellendus repellat ad
-                quas beatae nobis sit consequuntur dolore fugit dignissimos aliquid? Voluptas, exercitationem corrupti.
-                Quis maxime suscipit quae optio quibusdam eaque veritatis a nobis, tempore, beatae similique. Ut, illo
-                necessitatibus explicabo odit, sed harum sequi rem iste animi laborum quaerat. Alias ea quibusdam nihil?
-                Repellat, suscipit! Rem iusto quia deleniti autem reiciendis qui eos alias sit quos. Reiciendis
-                laboriosam tempora, dolore porro atque eos cum non veniam ex corrupti qui, sunt assumenda impedit
-                praesentium deserunt aut voluptate quidem, natus at optio aliquam sint dignissimos consectetur. Aut
-                eveniet ad praesentium animi expedita quas amet quod voluptatibus reiciendis earum quaerat, sit eaque
-                pariatur tenetur officia corporis, tempora nihil ut architecto natus dolore voluptatem minus atque
-                recusandae? Voluptates unde aperiam eos aspernatur voluptatibus fuga, asperiores ipsum, ut numquam
-                ducimus perferendis non ad soluta, incidunt doloremque recusandae consequuntur quos molestias facilis
-                consectetur.
-            </p>
+                Далеко-далеко за словесными горами в стране гласных, и согласных живут рыбные тексты. От всех, взгляд? Необходимыми, сбить коварный домах города букв ведущими, они языкового большого родного подзаголовок имени что имеет оксмокс. Мир, лучше!
+                Домах пор щеке жаренные языкового пунктуация ему, ручеек своего повстречался предупредила страна даль. Большой реторический своего, ведущими от всех первую свой, страна что жизни рыбного необходимыми даже путь. Всеми, заманивший! От всех.
+                Встретил жаренные буквоград текстами первую журчит но ведущими ее грамматики всеми свой. Вопрос продолжил строчка взгляд осталось, большой бросил домах если моей, обеспечивает силуэт своих выйти точках переписывается буквоград предупреждал?
+                Букв то он агентство, за вершину безопасную свое мир свою необходимыми, приставка скатился решила языком? Знаках приставка обеспечивает там строчка, свое решила лучше языкового! Запятой имеет однажды буквоград текстов взобравшись.
+                Которое до маленькая ручеек? Всемогущая над подзаголовок вдали выйти однажды осталось страна которое, пустился подпоясал семь обеспечивает оксмокс моей? Журчит по всей правилами, ручеек которое продолжил послушавшись безопасную маленькая меня текстов!
         </article>
         <article>
             <h2>Заголовок поменьше</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam quisquam quasi aperiam enim. Quos
-                consequuntur corporis laboriosam porro, architecto nobis quas cupiditate facere, hic natus inventore eum
-                quod vel. Deserunt nesciunt perferendis adipisci ipsum culpa alias et accusantium odio! Voluptas error,
-                voluptatibus harum dolorem illum accusantium quaerat quia totam qui aliquid dolore, ex obcaecati
-                nostrum. Laborum doloremque maiores accusamus. Autem repellat fuga eaque provident quo, voluptatem
-                soluta consequuntur nobis voluptates quas dolorum cumque, facilis repellendus facere culpa vitae? Id,
-                harum esse. Iure consectetur numquam, quas itaque labore omnis odit quo unde delectus officiis possimus
-                quisquam modi doloremque sunt at ipsum rerum. Quia voluptatem quasi, pariatur quos aliquid repellendus
-                beatae, suscipit omnis fugit maiores facilis reprehenderit quo necessitatibus labore odit optio, sint
-                amet. Dignissimos, sunt officia ut tenetur, illo labore, nostrum impedit cupiditate doloremque quaerat
-                illum harum odit asperiores voluptatibus. Iure, doloribus. Distinctio, esse facere. Tempore magnam
-                adipisci officia neque praesentium voluptatem mollitia, quidem, expedita similique magni modi non ipsa
-                voluptate laborum. Deserunt ex nam voluptas amet eum dolor consequuntur iusto expedita asperiores,
-                repellendus modi impedit exercitationem neque nihil aliquid adipisci quis! Est non a eum quibusdam
-                mollitia blanditiis sint alias consequuntur odit fugiat quia dolores hic dignissimos in eligendi
-                distinctio ratione labore, facilis repudiandae quos, quidem, beatae aut. Officia, possimus blanditiis
-                aspernatur nihil distinctio suscipit molestias ut porro repellat, veritatis beatae doloribus dolorem
-                quibusdam pariatur veniam perspiciatis at eaque! Ut beatae, reiciendis suscipit, explicabo porro dolorum
-                soluta culpa consequatur natus sequi placeat, accusamus molestias nesciunt vero. Rem magnam fuga
-                recusandae fugit! Cumque autem omnis neque reiciendis laboriosam dolorum nam odio sit! Esse aliquam
-                tenetur, provident possimus ipsam corporis placeat? Sint placeat ullam nulla vel tenetur perspiciatis
-                magnam! Nihil, ut fugit, debitis vero minus nobis iure recusandae hic tempore esse error nisi facilis
-                impedit culpa accusamus corrupti placeat beatae perspiciatis soluta, aspernatur dolorum id! Saepe
-                molestiae veritatis beatae reiciendis incidunt vero delectus aliquid aspernatur, atque iusto excepturi
-                quibusdam similique vel hic ratione dicta facere praesentium voluptas quo dignissimos magni? Quaerat
-                ratione voluptatum accusamus fuga sed reprehenderit sit, quia alias harum totam, dicta labore non,
-                repudiandae perspiciatis consequatur vitae quasi assumenda autem provident cumque cupiditate! Unde,
-                animi. Veritatis ut consequatur reiciendis. Commodi maiores delectus distinctio porro eaque tenetur,
-                mollitia ratione quis expedita praesentium voluptas a. Voluptatum beatae suscipit blanditiis earum
-                libero illo vel? Tenetur incidunt unde aut, nam obcaecati numquam, eum voluptates dignissimos quo ea
-                iure quisquam ex rem voluptatum, tempore temporibus veniam animi? Eligendi error velit nam porro qui? Ut
-                officia non dicta doloremque impedit libero, rem voluptatum? Quo facere tenetur totam, reiciendis
-                nesciunt aliquid hic dolorem quia, aperiam cupiditate explicabo eveniet voluptas maiores sint id eos
-                soluta molestiae laboriosam alias. Repellat illo itaque debitis cupiditate nisi consequatur optio
-                architecto quibusdam, adipisci dolore dicta quae, voluptatem labore atque aliquam at nesciunt aliquid
-                incidunt nihil veniam odit? Quibusdam accusamus libero, ex fugit cumque nesciunt deleniti ratione autem
-                eius modi ipsa eos distinctio vel officia magnam sunt quo recusandae placeat fuga dicta? Deserunt
-                suscipit qui nulla eos fugiat quidem, tempora officia velit sit!</p>
+            <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Продолжил на берегу, имени, единственное, своих первую не проектах образ текст ведущими все лучше силуэт это великий запятых предупреждал собрал домах решила! Единственное что страна, обеспечивает даль букв безопасную он пор снова. Заголовок, языкового города. Строчка живет, имени жизни великий, лучше свое дороге пояс наш, вдали всеми толку языком! Океана, подпоясал оксмокс знаках прямо диких имеет речью повстречался взгляд мир, необходимыми путь вопрос коварных то реторический свою. Речью, наш? Семантика своих, взобравшись, составитель бросил, над меня раз ему о рекламных на берегу текстов букв залетают использовало дорогу буквоград моей первую домах сих.</p>
         </article>
         <section>
             <h3>Бланк заказа</h3>
