--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 <body>
     <header class="header">
-        <a href="#"><img class="logo" src="/pictures/logo.jpg" alt="logo"></a>
+     <!--    <a href="#"><img class="logo" src="/pictures/logo.jpg" alt="logo"></a> -->
         <nav class="menu">
             <ul class="header__menu">
-                <li>1 item</li>
-                <li>2 item</li>
-                <li>3 item</li>
-                <li>4 item</li>
-                <li>5 item</li>
+                <li class="menu__item">1 item</li>
+                <li class="menu__item">3 item</li>
+                <li class="menu__item">4 item</li>
+                <li class="menu__item">2 item</li>
+                <li class="menu__item">5 item</li>
             </ul>
         </nav>
     </header>
