--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="header">
-     <!--    <a href="#"><img class="logo" src="/pictures/logo.jpg" alt="logo"></a> -->
+        <!--    <a href="#"><img class="logo" src="/pictures/logo.jpg" alt="logo"></a> -->
         <nav class="menu">
             <ul class="header__menu">
                 <li class="menu__item">1 item</li>
@@ -25,17 +25,34 @@
     </header>
     <main>
         <article>
-            <h1>Большой заголовок</h1>
+            <h1>Описание самой лучшей пышечной</h1>
             <p class="content">
-                Далеко-далеко за словесными горами в стране гласных, и согласных живут рыбные тексты. От всех, взгляд? Необходимыми, сбить коварный домах города букв ведущими, они языкового большого родного подзаголовок имени что имеет оксмокс. Мир, лучше!
-                Домах пор щеке жаренные языкового пунктуация ему, ручеек своего повстречался предупредила страна даль. Большой реторический своего, ведущими от всех первую свой, страна что жизни рыбного необходимыми даже путь. Всеми, заманивший! От всех.
-                Встретил жаренные буквоград текстами первую журчит но ведущими ее грамматики всеми свой. Вопрос продолжил строчка взгляд осталось, большой бросил домах если моей, обеспечивает силуэт своих выйти точках переписывается буквоград предупреждал?
-                Букв то он агентство, за вершину безопасную свое мир свою необходимыми, приставка скатился решила языком? Знаках приставка обеспечивает там строчка, свое решила лучше языкового! Запятой имеет однажды буквоград текстов взобравшись.
-                Которое до маленькая ручеек? Всемогущая над подзаголовок вдали выйти однажды осталось страна которое, пустился подпоясал семь обеспечивает оксмокс моей? Журчит по всей правилами, ручеек которое продолжил послушавшись безопасную маленькая меня текстов!
+                Далеко-далеко за словесными горами в стране гласных, и согласных живут рыбные тексты. От всех, взгляд?
+                Необходимыми, сбить коварный домах города букв ведущими, они языкового большого родного подзаголовок
+                имени что имеет оксмокс. Мир, лучше!
+                Домах пор щеке жаренные языкового пунктуация ему, ручеек своего повстречался предупредила страна даль.
+                Большой реторический своего, ведущими от всех первую свой, страна что жизни рыбного необходимыми даже
+                путь. Всеми, заманивший! От всех.
+                Встретил жаренные буквоград текстами первую журчит но ведущими ее грамматики всеми свой. Вопрос
+                продолжил строчка взгляд осталось, большой бросил домах если моей, обеспечивает силуэт своих выйти
+                точках переписывается буквоград предупреждал?
+                Букв то он агентство, за вершину безопасную свое мир свою необходимыми, приставка скатился решила
+                языком? Знаках приставка обеспечивает там строчка, свое решила лучше языкового! Запятой имеет однажды
+                буквоград текстов взобравшись.
+                Которое до маленькая ручеек? Всемогущая над подзаголовок вдали выйти однажды осталось страна которое,
+                пустился подпоясал семь обеспечивает оксмокс моей? Журчит по всей правилами, ручеек которое продолжил
+                послушавшись безопасную маленькая меня текстов!
         </article>
         <article>
-            <h2>Заголовок поменьше</h2>
-            <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Продолжил на берегу, имени, единственное, своих первую не проектах образ текст ведущими все лучше силуэт это великий запятых предупреждал собрал домах решила! Единственное что страна, обеспечивает даль букв безопасную он пор снова. Заголовок, языкового города. Строчка живет, имени жизни великий, лучше свое дороге пояс наш, вдали всеми толку языком! Океана, подпоясал оксмокс знаках прямо диких имеет речью повстречался взгляд мир, необходимыми путь вопрос коварных то реторический свою. Речью, наш? Семантика своих, взобравшись, составитель бросил, над меня раз ему о рекламных на берегу текстов букв залетают использовало дорогу буквоград моей первую домах сих.</p>
+            <h2>Продающая реклама</h2>
+            <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Продолжил на берегу,
+                имени, единственное, своих первую не проектах образ текст ведущими все лучше силуэт это великий запятых
+                предупреждал собрал домах решила! Единственное что страна, обеспечивает даль букв безопасную он пор
+                снова. Заголовок, языкового города. Строчка живет, имени жизни великий, лучше свое дороге пояс наш,
+                вдали всеми толку языком! Океана, подпоясал оксмокс знаках прямо диких имеет речью повстречался взгляд
+                мир, необходимыми путь вопрос коварных то реторический свою. Речью, наш? Семантика своих, взобравшись,
+                составитель бросил, над меня раз ему о рекламных на берегу текстов букв залетают использовало дорогу
+                буквоград моей первую домах сих.</p>
         </article>
         <section>
             <h3>Бланк заказа</h3>
@@ -43,6 +60,7 @@
                 <input type="text" placeholder="заказ">
                 <input type="radio" placeholder="заказ">
                 <input type="checkbox" placeholder="заказ">
+                 <button>Заказать пышку</button>
             </form>
         </section>
         <section>
@@ -57,9 +75,9 @@
         <aside>
             <h4>Погода</h4>
         </aside>
-        <footer>
-            <h4>Контактная информация</h4>
-            <ul>
+        <footer class="footer">
+            <h4 class="footer_title">Контактная информация</h4>
+            <ul class="footer_list">
                 <li><a href="#">1 item</a></li>
                 <li><a href="#">2 item</a></li>
                 <li><a href="#">3 item</a></li>
@@ -68,7 +86,7 @@
             </ul>
         </footer>
     </main>
-    <button>click it</button>
+   
 </body>
 
 </html>
